--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -187,7 +187,8 @@ en:
         roda_identifier_fragment_with_parent_html: This should be a unique ID that will be used to report this activity externally. This value cannot be edited once it is set.<br><br>The RODA identifier for this activity's parent is <strong>%{identifier}</strong>.
         sdgs_apply: For broad programme calls, please select the SDG most commonly represented across the individual projects within the programme. If unable, or if the activity is a delivery line, you may select 'N/A'.
         sector_category_html: For example, research, education or small to medium-sized enterprise (SME) development. Choose one of the %{link}
-        title: A short title that explains the purpose of the %{level}
+        title: A short title that explains the purpose of the %{level}. There is no character limit to this field. However, when this data is published to Statistics in International Development the title will be truncated at 150 characters.
+        description: There is no character limit to this field. However, when this data is published to Statistics in International Development the description will be truncated at 4000 characters.
         level: Select the type of activity
         level_step:
           fund: The amount of funding each delivery partner will receive
