Link to the Service performance article in footer
I have chosen to link to the generic article that will collect all service performance reports for each quarter, rather than to the specific link for the current quarter.

My thinking was that we don’t want to have to update the link during every quarter.

--- a/config/locales/views/footer.en.yml
+++ b/config/locales/views/footer.en.yml
@@ -7,3 +7,4 @@ en:
       accessibility_statement: Accessibility statement
       support_site: Support
       terms_of_service: Terms of service
+      service_performance: Service performance
