Projects should be owned by a delivery partner
This adds a validation to make sure that projects and third party projects are
owned by a delivery partner, and updates the associated tests that have failed,
because the tests were not reflecting the reality of how the application should
work

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -479,6 +479,10 @@ en:
                 invalid: Funds must be associated with the Service Owner Organisation
               programme:
                 invalid: Programmes must be associated with the Service Owner Organisation
+              project:
+                invalid: Projects must be associated with a Delivery Partner Organisation
+              third_party_project:
+                invalid: Third Party Projects must be associated with a Delivery Partner Organisation
   importer:
     errors:
       activity:
