Show short name on organisations page
The short name (`beis_organisation_reference` in code) is more useful to BEIS users on the organisations index page than the IATI reference.

The IATI reference can still be seen on the individual organisation page.

--- a/config/locales/models/organisation.en.yml
+++ b/config/locales/models/organisation.en.yml
@@ -27,6 +27,7 @@ en:
       organisation:
         name: Name
         iati_reference: International Aid Transparency Initiative (IATI) reference
+        beis_organisation_reference: Short name
   summary:
     label:
       organisation:
