--- a/config/locales/models/organisation.en.yml
+++ b/config/locales/models/organisation.en.yml
@@ -28,6 +28,10 @@ en:
         name: Name
         iati_reference: International Aid Transparency Initiative (IATI) reference
         beis_organisation_reference: Short name
+  tabs:
+    organisations:
+      delivery_partners: Delivery partners
+      matched_effort_providers: Matched effort providers
   summary:
     label:
       organisation:
@@ -68,6 +72,9 @@ en:
       index: Organisations
       new: Create a new organisation
       show: Organisation %{name}
+    organisations:
+      delivery_partners: Delivery partners
+      matched_effort_providers: Matched effort providers
   activerecord:
     errors:
       models:
