--- a/config/locales/models/organisation.en.yml
+++ b/config/locales/models/organisation.en.yml
@@ -43,8 +43,12 @@ en:
   page_content:
     organisation_details: Organisation details
     organisations:
-      button:
-        create: Add organisation
+      delivery_partners:
+        button:
+          create: Add delivery partner organisation
+      matched_effort_providers:
+        button:
+          create: Add matched effort provider organisation
     organisation:
       create_programme: Add level B activity
       button:
@@ -70,8 +74,11 @@ en:
     organisation:
       edit: Edit organisation
       index: Organisations
-      new: Create a new organisation
       show: Organisation %{name}
+      delivery_partner:
+        new: Create a new delivery partner organisation
+      matched_effort_provider:
+        new: Create a new matched effort provider organisation
     organisations:
       delivery_partners: Delivery partners
       matched_effort_providers: Matched effort providers
