TransactionUploadsController uses upload? check
Use our new `ReportPolicy#upload?` check. Also, added controller specs
that checks that the 'upload' button appears at appropriate times.

When viewing the transaction upload page associated with a report that
is currently not editable, a message is shown instead of the upload
form.

NB: It is highly unlikely users will see this message, as the upload
buttons will soon be removed from the Report pages too.

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -52,9 +52,14 @@ en:
             </p>
   label:
     report:
-     state:
-       inactive: Inactive
-       active: Active
+      state:
+        active: Active
+        approved: Approved
+        awaiting_changes: Awaiting changes
+        in_review: In review
+        inactive: Inactive
+        submitted: Submitted
+
   form:
     label:
       report:
