--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -109,7 +109,10 @@ en:
         service_owner:
           subject: "%{application_name} - A delivery partner has submitted a report"
       approved:
-        subject: "%{application_name} - Your report has been approved"
+        delivery_partner:
+          subject: "%{application_name} - Your report has been approved"
+        service_owner:
+          subject: "%{application_name} - A report has been approved"
       awaiting_changes:
         subject: "%{application_name} - A report is awaiting changes"
   action:
