Extend the report summary
We already showed the report state as summary on a single report.

Here, we add further helpful information for users:

- the report deadline
- the organisation of the report (if a BEIS user)
- the description of the report, if there is one
- whether the user can change (edit) the report or not

This last one has been added as we think some users may not understand
the relationship between report state and if the report contents can be
changed. We feel this is a nice, simple, unobtrusive way to show that.

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -50,6 +50,11 @@ en:
             <p class="govuk-body">
             The Service Manager will send the delivery partner an email notifying them that RODA is now open and their reporting cycle has begun.  ODA PMO Finance Lead will send the commissioning email confirming the deadline and relevant service updates to DPs 2 weeks before the report submission deadline.
             </p>
+      summary:
+        editable:
+          title: Report can be changed
+          "true": "Yes"
+          "false": "No"
   label:
     report:
       state:
