--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -518,4 +518,5 @@ en:
         cannot_update:
           fragment_present: There is an existing RODA ID present, but there is a fragment specified too, which will overwrite the existing fragment. Please remove the fragement from this row and try again.
           parent_present: There is an existing RODA ID present, but there is a parent activity specified too, which will overwrite the existing parent. Please remove the parent ID from this row and try again.
+          delivery_partner_identifier_present: The delivery partner identifier cannot be changed. Please remove the DP identifier from this row and try again.
         unauthorised: You are not authorised to report against this activity
