--- a/config/locales/models/outgoing_transfer.en.yml
+++ b/config/locales/models/outgoing_transfer.en.yml
@@ -21,13 +21,13 @@ en:
   form:
     label:
       outgoing_transfer:
-        destination: Enter RODA ID of the receiving activity
+        destination_roda_identifier: Enter RODA ID of the receiving activity
         financial_quarter: Financial Quarter
         financial_year: Financial Year
         value: Transfer amount
     hint:
       outgoing_transfer:
-        destination: For example, GCRF-BLOB-424434434
+        destination_roda_identifier: For example, GCRF-BLOB-424434434
         financial_quarter_and_year: The financial quarter in which the transfer was made
     button:
       outgoing_transfer:
