--- a/config/locales/models/incoming_transfer.en.yml
+++ b/config/locales/models/incoming_transfer.en.yml
@@ -20,6 +20,7 @@ en:
       source_organisation: Source organisation
       financial_quarter_and_year: Financial quarter and year
       transfer_amount: Transfer amount
+      beis_identifier: BEIS identifier
   form:
     label:
       incoming_transfer:
@@ -27,10 +28,12 @@ en:
         financial_quarter: Financial Quarter
         financial_year: Financial Year
         value: Transfer amount
+        beis_identifier: BEIS identifier (optional)
     hint:
       incoming_transfer:
         source_roda_identifier: For example, GCRF-BLOB-424434434
         financial_quarter_and_year: The financial quarter in which the transfer was made
+        beis_identifier: The tracker row ID for historic data
     button:
       incoming_transfer:
         submit: Create transfer record
