--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -515,6 +515,7 @@ en:
         invalid_collaboration_type: The collaboration type code is not valid
         invalid_aid_type: The aid type code is not valid
         invalid_fstc_applies: The free standing technical cooperation column is not valid
+        invalid_policy_marker: This is not a valid code for this policy marker
         invalid_parent: The parent activity is not valid
         parent_not_found: The parent activity cannot be found
         cannot_create: There is no RODA fragment or parent activity present, so cannot create an Activity
